<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent" 
	>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content" 
		android:padding="10dip" 
		android:orientation="vertical"
		>
		<TextView 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:text="@string/txt_menues_titel" 
			style="@style/Widget.Text.H1"
			/>
		<TextView 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:text="@string/txt_menues_optionsmenues" 
			style="@style/Widget.Text.H2"
			/>
		<TextView 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:text="@string/txt_menues_optionsmenues_hint"
			/>
		<TextView 
			android:layout_height="wrap_content" 
			android:layout_width="wrap_content" 
			style="@style/Widget.Text.H2" 
			android:text="@string/txt_menues_kontextmenues"
			/>
		<TextView 
			android:layout_height="wrap_content" 
			android:layout_width="wrap_content" 
			android:text="@string/txt_menues_kontextmenues_hint"
			/>
		<Button
			android:id="@+id/btn_menues_kontextmenue"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/btn_menues_kontextmenue"
			/>
		<TextView 
			android:layout_height="wrap_content" 
			android:layout_width="wrap_content" 
			style="@style/Widget.Text.H2" 
			android:text="@string/txt_menues_icons"
			/>
		<TextView 
			android:layout_height="wrap_content" 
			android:layout_width="wrap_content" 
			android:text="@string/txt_menues_icons_hint"
			/>
		<Button
			android:id="@+id/btn_menues_icons"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/btn_menues_icons"
			android:onClick="onNavButtonClick"
			/>
	</LinearLayout>
</ScrollView>