<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        style="@style/paddedLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            style="@style/Widget.Text.H1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_title" />

        <Button
            android:id="@+id/btn_layouts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onButtonClick"
            android:text="@string/btn_layouts" />

        <Button
            android:id="@+id/btn_views"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onButtonClick"
            android:text="@string/btn_views" />

        <Button
            android:id="@+id/btn_activities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onButtonClick"
            android:text="@string/btn_activities" />

        <Button
            android:id="@+id/btn_intents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onButtonClick"
            android:text="@string/btn_intents" />

        <Button
            android:id="@+id/btn_fragments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onButtonClick"
            android:text="@string/btn_fragments" />

        <Button
            android:id="@+id/btn_menues"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onButtonClick"
            android:text="@string/btn_menues" />

        <Button
            android:id="@+id/btn_dialoge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onButtonClick"
            android:text="@string/btn_dialoge" />

        <Button
            android:id="@+id/btn_benachrichtigungen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onButtonClick"
            android:text="@string/btn_benachrichtigungen" />

        <Button
            android:id="@+id/btn_daten"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onButtonClick"
            android:text="@string/btn_daten" />

        <Button
            android:id="@+id/btn_hintergrund"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onButtonClick"
            android:text="@string/btn_hintergrund" />

        <Button
            android:id="@+id/btn_aussenwelt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onButtonClick"
            android:text="@string/btn_aussenwelt" />

        <Button
            android:id="@+id/btn_multimedia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onButtonClick"
            android:text="@string/btn_multimedia" />

        <Button
            android:id="@+id/btn_hardware"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onButtonClick"
            android:text="@string/btn_hardware" />

        <Button
            android:id="@+id/btn_verschiedenes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onButtonClick"
            android:text="@string/btn_verschiedenes" />
    </LinearLayout>

</ScrollView>