<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent" 
	android:orientation="vertical"
	style="@style/paddedLayout"
	>
	<TextView
		style="@style/Widget.Text.H1"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/txt_dialoge"
		/>
	<TextView
		style="@style/Widget.Text.H2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/txt_dialoge_toast"
		/>
	<Button 
		android:id="@+id/btn_dialoge_toast_aufrufen"
		android:layout_width="match_parent" 
		android:layout_height="wrap_content" 
		android:text="@string/btn_dialoge_toast_aufrufen" 
		android:onClick="onButtonClick" 
		/>
	<TextView
		style="@style/Widget.Text.H2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/txt_dialoge_dialog"
		/>
	<Button 
		android:id="@+id/btn_dialoge_dialog_einfach"
		android:layout_width="match_parent" 
		android:layout_height="wrap_content" 
		android:text="@string/btn_dialoge_dialog_einfach" 
		android:onClick="onButtonClick" 
		/>
	<Button 
		android:id="@+id/btn_dialoge_dialog_auswahl"
		android:layout_width="match_parent" 
		android:layout_height="wrap_content" 
		android:text="@string/btn_dialoge_dialog_auswahl" 
		android:onClick="onButtonClick" 
		/>
	<Button 
		android:id="@+id/btn_dialoge_dialog_einzel"
		android:layout_width="match_parent" 
		android:layout_height="wrap_content" 
		android:text="@string/btn_dialoge_dialog_einzel" 
		android:onClick="onButtonClick" 
		/>
	<Button 
		android:id="@+id/btn_dialoge_dialog_mehrfach"
		android:layout_width="match_parent" 
		android:layout_height="wrap_content" 
		android:text="@string/btn_dialoge_dialog_mehrfach" 
		android:onClick="onButtonClick" 
		/>
</LinearLayout>
