<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/paddedLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txt_intents"
        style="@style/Widget.Text.H1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_intents" />

    <Button
        android:id="@+id/btn_intents_telefon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onButtonClick"
        android:text="@string/btn_intents_telefon" />

    <Button
        android:id="@+id/btn_intents_sms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onButtonClick"
        android:text="@string/btn_intents_sms" />

    <Button
        android:id="@+id/btn_intents_webadresse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onButtonClick"
        android:text="@string/btn_intent_webadresse" />

    <Button
        android:id="@+id/btn_intents_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onButtonClick"
        android:text="@string/btn_intents_email" />

    <Button
        android:id="@+id/btn_intents_karte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onButtonClick"
        android:text="@string/btn_intents_karte" />

    <Button
        android:id="@+id/btn_intents_navigieren"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onButtonClick"
        android:text="@string/btn_intents_navigieren" />

    <Button
        android:id="@+id/btn_intents_streetview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onButtonClick"
        android:text="@string/btn_intents_streetview" />

    <Button
        android:id="@+id/btn_intents_spezial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onButtonClick"
        android:text="@string/btn_intents_spezial" />

</LinearLayout>