<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/paddedLayout" >

    <TextView
        style="@style/Widget.Text.H1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_layouts" />

    <Button
        android:id="@+id/btn_layouts_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onButtonClick"
        android:text="@string/btn_layouts_linear" />

    <Button
        android:id="@+id/btn_layouts_tabelle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onButtonClick"
        android:text="@string/btn_layouts_tabelle" />

    <Button
        android:id="@+id/btn_layouts_grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_neu_in_ics"
        android:drawablePadding="-31dp"
        android:onClick="onButtonClick"
        android:text="@string/btn_layouts_grid" />

    <Button
        android:id="@+id/btn_layouts_relativ"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onButtonClick"
        android:text="@string/btn_layouts_relativ" />

    <Button
        android:id="@+id/btn_layouts_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onButtonClick"
        android:text="@string/btn_layouts_frame" />

    <Button
        android:id="@+id/btn_layouts_aufteilen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onButtonClick"
        android:text="@string/btn_layouts_aufteilen" />

    <Button
        android:id="@+id/btn_layouts_varianten"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onButtonClick"
        android:text="@string/btn_layouts_varianten" />

</LinearLayout>