<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent" 
	android:orientation="vertical"
	style="@style/paddedLayout"
	>
	<TextView
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
		style="@style/Widget.Text.H1"
		android:text="@string/txt_hardware"
		/>
	<Button
		android:id="@+id/btn_hardware_eingabe"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/btn_hardware_eingabe"
		android:onClick="onButtonClick"
		/>
	<Button
		android:id="@+id/btn_hardware_kamera"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/btn_hardware_kamera"
		android:onClick="onButtonClick"
		/>
	<Button
		android:id="@+id/btn_hardware_sensoren"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/btn_hardware_sensoren"
		android:onClick="onButtonClick"
		/>
	<Button
		android:id="@+id/btn_hardware_mikrofon"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/btn_hardware_mikrofon"
		android:onClick="onButtonClick"
		/>
</LinearLayout>
