<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	>
	<LinearLayout
		android:layout_width="match_parent" 
		android:layout_height="wrap_content"
		android:orientation="vertical" 
		style="@style/paddedLayout"
		>
		<TextView 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
			style="@style/Widget.Text.H1"
			android:text="@string/txt_hardware_sensoren" />
		<TextView 
			style="@style/Widget.Text.H2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/txt_hardware_sensoren_accel" />
		<TableLayout 
			android:layout_width="match_parent"
			android:layout_height="wrap_content" 
			android:stretchColumns="0,1">
			<TableRow>
				<TextView 
					android:text="@string/txt_hardware_sensoren_x" />
				<TextView 
					android:id="@+id/txt_hardware_sensoren_accel_x" />
			</TableRow>
			<TableRow>
				<TextView 
					android:text="@string/txt_hardware_sensoren_y" />
				<TextView 
					android:id="@+id/txt_hardware_sensoren_accel_y" />
			</TableRow>
			<TableRow>
				<TextView 
					android:text="@string/txt_hardware_sensoren_z" />
				<TextView 
					android:id="@+id/txt_hardware_sensoren_accel_z" />
			</TableRow>
		</TableLayout>
		<TextView 
			style="@style/Widget.Text.H2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/txt_hardware_sensoren_schwerkraft" />
		<TableLayout 
			android:layout_width="match_parent"
			android:layout_height="wrap_content" 
			android:stretchColumns="0,1">
			<TableRow>
				<TextView 
					android:text="@string/txt_hardware_sensoren_x" />
				<TextView 
					android:id="@+id/txt_hardware_sensoren_schwerkraft_x" />
			</TableRow>
			<TableRow>
				<TextView 
					android:text="@string/txt_hardware_sensoren_y" />
				<TextView 
					android:id="@+id/txt_hardware_sensoren_schwerkraft_y" />
			</TableRow>
			<TableRow>
				<TextView 
					android:text="@string/txt_hardware_sensoren_z" />
				<TextView 
					android:id="@+id/txt_hardware_sensoren_schwerkraft_z" />
			</TableRow>
		</TableLayout>
		<TextView 
			style="@style/Widget.Text.H2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/txt_hardware_sensoren_rotation" />
		<TableLayout 
			android:layout_width="match_parent"
			android:layout_height="wrap_content" 
			android:stretchColumns="0,1">
			<TableRow>
				<TextView 
					android:text="@string/txt_hardware_sensoren_x" />
				<TextView 
					android:id="@+id/txt_hardware_sensoren_rotation_x" />
			</TableRow>
			<TableRow>
				<TextView 
					android:text="@string/txt_hardware_sensoren_y" />
				<TextView 
					android:id="@+id/txt_hardware_sensoren_rotation_y" />
			</TableRow>
			<TableRow>
				<TextView 
					android:text="@string/txt_hardware_sensoren_z" />
				<TextView 
					android:id="@+id/txt_hardware_sensoren_rotation_z" />
			</TableRow>
		</TableLayout>
		<TextView 
			style="@style/Widget.Text.H2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/txt_hardware_sensoren_magnet" />
		<TableLayout 
			android:layout_width="match_parent"
			android:layout_height="wrap_content" 
			android:stretchColumns="0,1">
			<TableRow>
				<TextView 
					android:text="@string/txt_hardware_sensoren_x" />
				<TextView 
					android:id="@+id/txt_hardware_sensoren_magnet_x" />
			</TableRow>
			<TableRow>
				<TextView 
					android:text="@string/txt_hardware_sensoren_y" />
				<TextView 
					android:id="@+id/txt_hardware_sensoren_magnet_y" />
			</TableRow>
			<TableRow>
				<TextView 
					android:text="@string/txt_hardware_sensoren_z" />
				<TextView 
					android:id="@+id/txt_hardware_sensoren_magnet_z" />
			</TableRow>
		</TableLayout>
		<TextView 
			style="@style/Widget.Text.H2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/txt_hardware_sensoren_licht" />
		<TableLayout 
			android:layout_width="match_parent"
			android:layout_height="wrap_content" 
			android:stretchColumns="0,1">
			<TableRow>
				<TextView 
					android:text="@string/txt_hardware_sensoren_wert" />
				<TextView 
					android:id="@+id/txt_hardware_sensoren_licht" />
			</TableRow>
		</TableLayout>
		<TextView 
			style="@style/Widget.Text.H2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/txt_hardware_sensoren_naehe" />
		<TableLayout 
			android:layout_width="match_parent"
			android:layout_height="wrap_content" 
			android:stretchColumns="0,1">
			<TableRow>
				<TextView 
					android:text="@string/txt_hardware_sensoren_wert" />
				<TextView 
					android:id="@+id/txt_hardware_sensoren_naehe" />
			</TableRow>
		</TableLayout>
		<TextView 
			style="@style/Widget.Text.H2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/txt_hardware_sensoren_temperatur" />
		<TableLayout 
			android:layout_width="match_parent"
			android:layout_height="wrap_content" 
			android:stretchColumns="0,1">
			<TableRow>
				<TextView 
					android:text="@string/txt_hardware_sensoren_wert" />
				<TextView 
					android:id="@+id/txt_hardware_sensoren_temperatur" />
			</TableRow>
		</TableLayout>
	</LinearLayout>
</ScrollView>
