<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/paddedLayout"
    android:orientation="vertical" >

	<TextView
	    style="@style/Widget.Text.H1"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/txt_activities_unteractivity_mit_antwort" />
	
	<TextView
	    android:id="@+id/txt_gestellte_frage"
	    style="@style/Widget.Text.H2"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/txt_platzhalter" />

	<TextView
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginBottom="10dip"
	    android:gravity="center_horizontal"
	    android:text="@string/txt_activities_unteractivity_ueberlegt" />
	
  	<Button
  		android:layout_width="match_parent"
  		android:layout_height="wrap_content"
  		android:text="@string/btn_activities_unteractivity_antwort_geben"
  		android:onClick="gibAntwort"
  		/>
    
</LinearLayout>